# nfl-ai

./: .env.example  .gitignore  AI_SYSTEM_COMPLETE.md  ARCHITECTURE.md  COMPLETE_DATA_SOURCE_RESEARCH.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  FRONTEND_PLAN.md  MASTER_PLAN.md  Makefile  NEW_SYSTEM_ARCHITECTURE.md  NEXT_SESSION_START_HERE.md  OPERATIONS_GUIDE.md  OPPORTUNITIES_SYSTEM_COMPLETE.md  PHASE_0_RESEARCH_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  PROJECT_AUDIT.md  PROJECT_STATUS.md  QUICK_START.md  RAG_EXPANSION_COMPLETE.md  README.md  SCHEDULE_FIX_COMPLETE.md  SCHEDULE_VALIDATION.md  SESSION_SUMMARY_2025-10-28.md  SESSION_SUMMARY_OCT31.md  SYSTEM_AUDIT_2025-10-26.md  SYSTEM_STATUS.md  WORK_COMPLETED_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
backend/: __init__.py  alembic.ini
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/scripts/: __init__.py  apply_slate_migration.py  backfill_player_stats.py  backfill_prediction_slates.py  backfill_sleeper_stats.py  backup_postgres.sh  backup_qdrant.sh  clear_old_predictions.py  db_utils.py  demo_prediction.py  fetch_nfl_schedule.py  generate_narratives.py  generate_narratives_limited.py  migrate_predictions_table.sql  populate_players_from_sleeper.py  populate_teams.py  refresh_predictions.py  run_prediction_scheduler.py  seed_teams.py  seed_test_stats.py  (+4 more)
docker/: Dockerfile.api  Dockerfile.worker
frontend/: .env.example  Dockerfile  Dockerfile.dev  README.md  next.config.js  package.json  tailwind.config.ts
requirements/: base.txt  dev.txt
(+80 files in other folders)
